Fix compatibility with AS Ladybug and Java 17

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,13 +26,25 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace "pl.pr0gramista.charset_converter"
-    compileSdkVersion 34
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
+    }
+
+    kotlin {
+        jvmToolchain(17)
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
